# ope_core

./: CMakeLists.txt  cartesian_main.cpp  main.py  spherical_main.cpp
cpython/: CMakeLists.txt
cpython/inc/: cpython_core.h  util.h
cpython/src/: cpython_core.cpp  util.cpp
inc/: core.h
python/: opepy.i  opepy.py  opepy_wrap.cxx  setup.py
src/: core.cpp
